font size change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .game_container {
-            font-size: 3rem;
+            font-size: 36px;
             text-align: center;
             color: white;
         }
