--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             margin: 20px 0;
         }
 
-        #question {
+        #question-container {
             display: inline-block;
             width: 100px;
             height: 100px;
@@ -75,7 +75,9 @@
 
     <div class="game_container">
         <div class="com-choice">
-            <span id="question">?</span>
+            <div id="question-container">
+                <span id="question">?</span>
+            </div>
         </div>
 
         <h2 id="vs">VS</h2>
