잡다한 것들 해결

--- a/MZB.html
+++ b/MZB.html
@@ -30,6 +30,6 @@
 <body>
     <h1 id="title">묵찌빠</h1>
     <p>곧 찾아옵니다!</p>
-    <a href="main.html"><button>메인으로</button></a>
+    <a href="index.html"><button>메인으로</button></a>
 </body>
 </html>
