--- a/MZB.html
+++ b/MZB.html
@@ -5,23 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>묵찌빠</title>
+    <link rel="stylesheet" href="base.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: rgb(26, 26, 26);
-            font-size: 1rem;
-        }
-
-        #title {
-            padding: 10px;
-            background-color: white;
-            text-align: center;
-        }
         p {
             color: white;
         }
@@ -29,7 +14,8 @@
 </head>
 <body>
     <h1 id="title">묵찌빠</h1>
-    <p>곧 찾아옵니다!</p>
+    <p>안 찾아옵니다!</p>
+    못하겠다
     <a href="index.html"><button>메인으로</button></a>
 </body>
 </html>
