--- a/index.html
+++ b/index.html
@@ -4,28 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>가위바위보</title>
+    <link rel="stylesheet" href="base.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: rgb(26, 26, 26);
-            font-size: 1rem;
-        }
-
-        #title {
-            padding: 10px;
-            background-color: white;
-            text-align: center;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
         .btn-container {
             margin-top: 50px;
             display: flex;
@@ -35,6 +15,7 @@
         }
 
         button {
+            color: black;
             width: 200px;
             height: 100px;
             font-size: 30px;
