--- a/RPS_basic.html
+++ b/RPS_basic.html
@@ -5,223 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            transition: all 0.5s;
-        }
-
-        body {
-            background-color: rgb(26, 26, 26);
-            font-size: 1rem;
-        }
-
-        #title {
-            padding: 10px;
-            background-color: white;
-            text-align: center;
-        }
-
-        .face-icon {
-            color: white;
-            font-size: 10rem;
-            position: absolute;
-        }
-
-        .face .face-icon:first-child {
-            left: 0;
-            top: 50%;
-            margin-left: 75px;
-        }
-
-        .face .face-icon:last-child {
-            right: 0;
-            top: 50%;
-            margin-right: 75px;
-        }
-
-        .game_container {
-            font-size: 3rem;
-            text-align: center;
-            color: white;
-        }
-
-        .game_container>* {
-            margin: 20px 0;
-        }
-
-        .com-choice {
-            height: 125px;
-        }
-
-        #question-container {
-            display: inline-block;
-            width: 125px;
-            height: 125px;
-            text-align: center;
-            font-size: 5rem;
-            border: 3px solid white;
-            border-radius: 100%;
-        }
-
-        .turn {
-            transform: rotateY(1080deg);
-            transition: all 2s;
-        }
-
-        #vs {
-            font-size: 4rem;
-        }
-
-        .player_img_select {
-            display: inline-block;
-        }
-
-        img {
-            width: 125px;
-            border: 2px solid white;
-            border-radius: 100%;
-            margin: 0 10px;
-            padding: 5px;
-            transition: all 0.5s;
-        }
-
-        .player_img_select img:hover {
-            cursor: pointer;
-        }
-
-        button {
-            width: 100px;
-            height: 50px;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        footer {
-            color: white;
-            text-align: right;
-            padding-bottom: 3px;
-            width: 100%;
-            position: absolute;
-            bottom: 0;
-        }
-
-        .hidden {
-            display: none !important;
-        }
-
-        @media all and (min-width:768px) and (max-width:1023px) {
-            .face-icon {
-                margin: 0 50px;
-                font-size: 5rem;
-            }
-
-            .game_container {
-                font-size: 2rem;
-            }
-
-            img {
-                width: 100px;
-                height: 100px;
-            }
-
-            .com-choice {
-                height: 100px;
-            }
-
-            #question-container {
-                width: 100px;
-                height: 100px;
-                font-size: 4rem;
-            }
-
-            #vs {
-                font-size: 3rem;
-            }
-
-        }
-
-        /* 모바일 가로, 테블릿 세로 (해상도 480px ~ 767px)*/
-        @media all and (min-width:480px) and (max-width:767px) {
-            .face {
-                display: none;
-            }
-
-            .game_container {
-                font-size: 2rem;
-            }
-
-            .com-choice {
-                height: 100px;
-            }
-
-            #question-container {
-                width: 100px;
-                height: 100px;
-                font-size: 3rem;
-            }
-
-            #vs {
-                font-size: 2rem;
-            }
-
-            img {
-                width: 100px;
-                height: 100px;
-            }
-
-            button {
-                width: 100px;
-                height: 50px;
-                font-size: 1rem;
-            }
-
-        }
-
-        /* 모바일 가로, 테블릿 세로 (해상도 ~ 479px)*/
-        @media all and (max-width:479px) {
-            .face {
-                display: none;
-            }
-
-            .game_container {
-                font-size: 1.5rem;
-            }
-
-            .com-choice {
-                height: 75px;
-            }
-
-            #question-container {
-                width: 75px;
-                height: 75px;
-                font-size: 3rem;
-            }
-
-            #vs {
-                font-size: 2rem;
-            }
-
-            img {
-                width: 75px;
-                height: 75px;
-            }
-
-            button {
-                width: 100px;
-                height: 50px;
-                font-size: 1rem;
-            }
-
-        }
-    </style>
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="RPS_basic.css">
 </head>
 
 <body>
     <h1 id="title">가위바위보</h1>
 
+    <div class="animation-check">
+        <label for="animation">애니메이션</label>
+        <input type="checkbox" name="animation" value="">
+    </div>
     <div class="face">
         <i class="fa-solid fa-face-smile face-icon"></i>
         <i class="fa-solid fa-face-smile face-icon"></i>
@@ -254,6 +48,8 @@
     </footer>
 
 
+
+
     <!-- <footer>
         <a target="_blank" href="https://icons8.com/icon/17663/hand-rock">Hand Rock</a> icon by <a target="_blank"
             href="https://icons8.com">Icons8</a>,
@@ -265,18 +61,10 @@
 </body>
 
 <script src="https://kit.fontawesome.com/21b900d064.js" crossorigin="anonymous"></script>
-
+<script src="basic_game.js"></script>
 <script>
+    // face icon
     const faceIcons = document.querySelectorAll("i.face-icon");
-    const playerImgSelect = document.querySelector("div.player_img_select");
-    const images = playerImgSelect.querySelectorAll("img");
-
-    const computerChoice = document.querySelector(".com-choice");
-    const computerImage = computerChoice.querySelector("img");
-    const questionContainer = document.querySelector("#question-container");
-    const result = document.getElementById("result");
-    const retry = document.querySelector(".retry");
-    let isGame = true;
 
     const ChangeFaceIcon = (face) => {
         faceIcons.forEach(icon => {
@@ -286,6 +74,30 @@
             icon.classList.add("fa-face-" + face);
         });
     };
+
+    // RPS images
+    const playerImgSelect = document.querySelector("div.player_img_select");
+    const images = playerImgSelect.querySelectorAll("img");
+
+    // computer
+    const computerChoice = document.querySelector(".com-choice");
+    const computerImage = computerChoice.querySelector("img");
+
+    // question
+    const questionContainer = document.querySelector("#question-container");
+
+    // result
+    const result = document.getElementById("result");
+
+    // retry
+    const retryElement = document.querySelector(".retry");
+
+    // game check
+    let isGame = true;
+
+    // animation check
+    let isAnimation = true;
+
 
     const CheckIfWin = (playerId, computerId) => {
         console.log(playerId, computerId);
@@ -302,7 +114,30 @@
         }
     }
 
-    const HandleClick = (event) => {
+    const GameOver = (playerElementId) => {
+        // classList job
+        questionContainer.classList.add("hidden");
+        questionContainer.classList.remove("turn");
+        computerImage.classList.remove("hidden");
+
+        // random computer choice
+        const randomNumber = Math.floor(Math.random() * 3);
+        const randomImgSrc = images[randomNumber].src;
+        computerImage.src = randomImgSrc;
+
+        //change Result Text
+        const resultText = CheckIfWin(parseInt(playerElementId), randomNumber);
+        result.innerText = resultText;
+    }
+
+    const Turn = (playerElementId) => {
+        questionContainer.classList.add("turn");
+        setTimeout(() => {
+            GameOver(playerElementId);
+        }, 2000);
+    }
+
+    const HandleImageClick = (event) => {
         if (isGame == false) {
             return;
         }
@@ -316,36 +151,21 @@
             }
         }
 
-        questionContainer.classList.add("turn");
+        if (isAnimation == true) {
+            Turn(elementId);
+        } else {
+            GameOver(elementId);
+        }
 
-        setTimeout(() => {
-            questionContainer.classList.add("hidden");
-            questionContainer.classList.remove("turn");
-            computerImage.classList.remove("hidden");
-            const randomNumber = Math.floor(Math.random() * 3);
-            const randomImgSrc = images[randomNumber].src;
-            computerImage.src = randomImgSrc;
-            const resultText = CheckIfWin(parseInt(elementId), randomNumber);
-            result.innerText = resultText;
-
-        }, 2000);
     }
 
-    const Retry = () => {
-        questionContainer.classList.remove("hidden");
-        images.forEach(img => {
-            img.classList.remove("hidden");
-        });
-        computerImage.classList.add("hidden");
-        result.innerText = "가위바위보!";
-        isGame = true;
-    }
+    // add event listener
 
     for (image of images) {
-        image.addEventListener("click", HandleClick);
+        image.addEventListener("click", HandleImageClick);
     }
 
-    retry.addEventListener("click", Retry);
+    retryElement.addEventListener("click", Retry);
 </script>
 
 </html>
